--- a/public/modules/pins/css/style.scss
+++ b/public/modules/pins/css/style.scss
@@ -11,7 +11,7 @@
         height:85vh;
         width:100vw;
 
-        div.pin.pannel{ 
+        div.pin-panel{            
             display:grid;
             grid-template-columns: auto auto auto auto auto;
             grid-template-rows: auto auto auto;
@@ -19,8 +19,8 @@
             align-items: center;
             justify-items: center;
         
-            width:clamp(400px, 50vw, 700px);
-            height:clamp(100px, 70vw, 60vh);
+            width:clamp(400px, 70vw, 700px);
+            height:clamp(100px, 60vw, 60vh);
 
             div.switch{
                 height:clamp(60px, 16vw, 12vh);
@@ -62,38 +62,38 @@
 
     body{
         background:linear-gradient(#455D8C, #89A3D6);
-    }
+        
+        div.grid-container{
+            // border:1px solid red; 
 
-div.grid-container{
-    // border:1px solid red; 
+            div.pin-panel{
+                // border:1px solid red;
 
-    div.pin-pannel{
-        // border:1px solid red;
+                div.switch{
+                    background:none;
 
-        div.switch{
-            background:none;
+                    border: clamp(.5vh, .5vw, 20px) solid white;
+                    border-radius: 200px;
 
-            border: clamp(.5vh, .5vw, 20px) solid white;
-            border-radius: 200px;
+                    cursor:pointer;
 
-            cursor:pointer;
+                    transition: align-items .4s ease-in-out;
 
-            transition: align-items .4s ease-in-out;
+                    div.slider{
+                        border-radius:200px;
 
-            div.slider{
-                border-radius:200px;
+                        background: white;
+                    }
+                }
 
-                background: white;
+                .switch, .lock, .pin, .lightning{
+                    // border:1px solid blue;
+                    filter: drop-shadow(clamp(10px, 1vw, 12px) clamp(10px, 1vw, 12px) rgba(0, 0, 0, 0.2));
+                }
+
+                #lightning-pin0, #lightning-pin1, #lightning-pin2{
+                    visibility: hidden;
+                }
             }
         }
-
-        .switch, .lock, .pin, .lightning{
-            // border:1px solid blue;
-            filter: drop-shadow(clamp(10px, 1vw, 12px) clamp(10px, 1vw, 12px) rgba(0, 0, 0, 0.2));
-        }
-
-        #lightning-pin0, #lightning-pin1, #lightning-pin2{
-            visibility: hidden;
-        }
     }
-}
